# FewShotLearningForPneumonia

./: .gitignore  README.md  comparative_models.ipynb  eval.ipynb  evaluation.ipynb  evaluation_summary.csv  evaluation_summary_optimized.csv  fsl_comparison_metrics.csv  optimized_eval.ipynb  pyproject.toml
models/: relation_module.h5
