[tool.poetry]
name = "few-shot learning"
version = "0.1.0"
description = ""
authors = ["Bobby Tomlinson <btomlinson237@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.6.0"
torchvision = "^0.21.0"
scikit-learn = "^1.6.1"
nibabel = "^5.3.2"
tqdm = "^4.67.1"
matplotlib = "^3.10.0"
pandas = "^2.2.3"
tensorflow = "^2.18.0"
keras = "^3.8.0"
keras-preprocessing = "^1.1.2"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
